// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip Component renders chip with icon when iconCtaClick prop is provided 1`] = `
<div
  className="sc-bcHOTY hmHmYg"
>
  <p
    className="MuiTypography-root MuiTypography-body1 sc-gsMHZj hPfbYd css-ahj2mt-MuiTypography-root"
  >
    Test Chip
  </p>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
    data-testid="CloseRoundedIcon"
    focusable="false"
    onClick={[Function]}
    style={
      {
        "cursor": "pointer",
      }
    }
    viewBox="0 0 24 24"
  >
    <path
      d="M18.3 5.71a.9959.9959 0 0 0-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
    />
  </svg>
</div>
`;

exports[`Chip Component renders chip with text correctly 1`] = `
<div
  className="sc-bcHOTY hmHmYg"
>
  <p
    className="MuiTypography-root MuiTypography-body1 sc-gsMHZj hPfbYd css-ahj2mt-MuiTypography-root"
  >
    Test Chip
  </p>
</div>
`;

exports[`ChipGroup Component renders all chips when displayCount prop is not provided 1`] = `
<div
  className="MuiGrid-root css-popmxn-MuiGrid-root"
>
  <div
    className="sc-dkHyXG jsyMHN"
    onClick={[Function]}
  >
    <div
      className="sc-bcHOTY hmHmYg"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 sc-gsMHZj hPfbYd css-ahj2mt-MuiTypography-root"
      >
        +1
      </p>
    </div>
  </div>
</div>
`;

exports[`ChipGroup Component renders chip popover when more chips are available 1`] = `
<div
  className="MuiGrid-root css-popmxn-MuiGrid-root"
>
  <div
    className="sc-dkHyXG jsyMHN"
    onClick={[Function]}
  >
    <div
      className="sc-bcHOTY hmHmYg"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 sc-gsMHZj hPfbYd css-ahj2mt-MuiTypography-root"
      >
        +2
      </p>
    </div>
  </div>
</div>
`;

exports[`ChipGroup Component renders only specified number of chips when displayCount prop is provided 1`] = `
<div
  className="MuiGrid-root css-popmxn-MuiGrid-root"
>
  <div
    bgColor="red"
    className="sc-bcHOTY gwcDRY"
    textColor="white"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 sc-gsMHZj hPfbYd css-ahj2mt-MuiTypography-root"
    >
      Chip  1
    </p>
  </div>
</div>
`;

exports[`Styled Components renders StyledChipContainer correctly 1`] = `
<div
  bgColor="red"
  className="sc-bcHOTY gwcDRY"
  textColor="white"
/>
`;

exports[`Styled Components renders StyledChipShowMoreContainer correctly 1`] = `
<div
  className="sc-dkHyXG jsyMHN"
>
  Show More
</div>
`;

exports[`Styled Components renders StyledPopoverChipGroup correctly 1`] = `
<div
  className="sc-iBIYEh gxoWvO"
>
  Chip Group
</div>
`;

exports[`Styled Components renders StyledPopoverContainer correctly 1`] = `
<div
  className="sc-eDgayY cIMjta"
>
  Popover Container
</div>
`;

exports[`Styled Components renders StyledPopoverSectionContainer correctly 1`] = `
<div
  className="sc-jTkTEj iSLCYo"
>
  Section Content
</div>
`;

exports[`Styled Components renders StyledPopoverSectionHeader correctly 1`] = `
<span
  className="sc-gLfKCG bJXxJY"
>
  Section Header
</span>
`;

exports[`Styled Components renders StyledPopoverWrapper correctly 1`] = `
<div
  className="sc-hLljAB bYjhBD"
>
  Popover Content
</div>
`;
